@@ -22,7 +22,7 @@ import fm.last.musicbrainz.coverart.CoverArtImage;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.sql.Connection;
 import java.util.ArrayList;
@@ -360,7 +360,7 @@ public class CoverArtArchiveUtil extends CoverUtil {
 
 		while (!owner && !Thread.currentThread().isInterrupted()) {
 
-			// Find if any other tread is currently searching the same tag
+			// Find if any other thread is currently searching the same tag
 			synchronized (TAG_LATCHES_LOCK) {
 				for (CoverArtArchiveTagLatch latch : TAG_LATCHES) {
 					if (latch.info.equals(tagInfo)) {
@@ -427,7 +427,7 @@ public class CoverArtArchiveUtil extends CoverUtil {
 
 		while (!owner && !Thread.currentThread().isInterrupted()) {
 
-			// Find if any other tread is currently searching the same MBID
+			// Find if any other thread is currently searching the same MBID
 			synchronized (COVER_LATCHES_LOCK) {
 				for (CoverArtArchiveCoverLatch latch : COVER_LATCHES) {
 					if (latch.mBID.equals(mBID)) {
@@ -793,7 +793,7 @@ public class CoverArtArchiveUtil extends CoverUtil {
 					}
 
 					try {
-						HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
+						HttpURLConnection connection = (HttpURLConnection) URI.create(url).toURL().openConnection();
 						connection.setRequestProperty("Accept-Charset", StandardCharsets.UTF_8.name());
 						int status = connection.getResponseCode();
 						if (status != 200) {
