@@ -30,6 +30,7 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.MalformedURLException;
 import java.net.Socket;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
@@ -65,7 +66,7 @@ import net.pms.media.subtitle.MediaOnDemandSubtitle;
 import net.pms.media.subtitle.MediaSubtitle;
 import net.pms.network.HTTPResource;
 import net.pms.network.mediaserver.HTTPXMLHelper;
-import net.pms.network.mediaserver.handlers.MediaStreamHandler;
+import net.pms.network.mediaserver.MediaServerRequest;
 import net.pms.network.mediaserver.handlers.SearchRequestHandler;
 import net.pms.network.mediaserver.handlers.message.BrowseRequest;
 import net.pms.network.mediaserver.handlers.message.BrowseSearchRequest;
@@ -122,14 +123,14 @@ public class RequestV2 extends HTTPResource {
 
 	private final HttpMethod method;
 	private final SearchRequestHandler searchRequestHandler = new SearchRequestHandler();
-
-	private UmsConfiguration configuration = PMS.getConfiguration();
-
 	/**
 	 * A {@link String} that contains the uri with which this {@link RequestV2}
 	 * was created.
 	 */
-	private String uri;
+	private final String uri;
+
+	private UmsConfiguration configuration = PMS.getConfiguration();
+
 	private String soapaction;
 	private String content;
 	private int startingIndex;
@@ -319,31 +320,15 @@ public class RequestV2 extends HTTPResource {
 		InputStream inputStream = null;
 		ChannelFuture future = null;
 		try {
-			// Samsung 2012 TVs have a problematic preceding slash that needs to be removed.
-			if (uri.startsWith("/")) {
-				LOGGER.trace("Stripping preceding slash from: " + uri);
-				uri = uri.substring(1);
-			}
-
 			if (uri.startsWith("api/")) {
 				response.append(NextcpApiHandler.handleApiRequest(output, uri.substring(4), event));
 			} else if ((HttpMethod.GET.equals(method) || HttpMethod.HEAD.equals(method)) && uri.startsWith("ums/")) {
-				// Request to retrieve a file
-				//here, renderer should has been registred.
-				String umsUri = StringUtils.substringAfter(uri, "ums/");
-				/**
-				 * part 1 : renderer uuid
-				 * part 2 : action
-				 * part 3 : resource id
-				 * part 4 : optional
-				 */
-				String[] requestData = umsUri.split("/", 4);
-				if (requestData.length > 2) {
-					// Retrieve the StoreResource itself.
-					// Some clients escape the separators in their request: unescape them.
-					String id = requestData[2].replace("%24", "$");
+				// Request to retrieve a resource
+				// here, renderer should has been registred.
+				MediaServerRequest mediaServerRequest = new MediaServerRequest(uri);
+				if (!mediaServerRequest.isBadRequest()) {
 					// Get resource
-					resource = renderer.getMediaStore().getResource(id);
+					resource = renderer.getMediaStore().getResource(mediaServerRequest.getResourceId());
 				}
 
 				if (transferMode != null) {
@@ -352,9 +337,9 @@ public class RequestV2 extends HTTPResource {
 
 				// if we found a folder we MUST be asked for thumbnails
 				// otherwise this is not allowed
-				if (resource != null && MediaStreamHandler.THUMBNAIL.equals(requestData[1])) {
+				if (resource != null && mediaServerRequest.isThumbnailRequest()) {
 					// This is a request for a thumbnail file.
-					DLNAImageProfile imageProfile = ImagesUtil.parseImageRequest(requestData[3], DLNAImageProfile.JPEG_TN);
+					DLNAImageProfile imageProfile = ImagesUtil.parseImageRequest(mediaServerRequest.getOptionalPath(), DLNAImageProfile.JPEG_TN);
 					output.headers().set(HttpHeaders.Names.CONTENT_TYPE, imageProfile.getMimeType());
 					output.headers().set(HttpHeaders.Names.ACCEPT_RANGES, HttpHeaders.Values.BYTES);
 					output.headers().set(HttpHeaders.Names.EXPIRES, getFutureDate() + " GMT");
@@ -398,36 +383,36 @@ public class RequestV2 extends HTTPResource {
 					output.headers().set(HttpHeaders.Names.CONNECTION, HttpHeaders.Values.KEEP_ALIVE);
 				} else if (resource instanceof StoreItem item) {
 					// StoreResource was found.
-					if (requestData[3].endsWith("/chapters.vtt")) {
+					if (mediaServerRequest.getOptionalPath().endsWith("/chapters.vtt")) {
 						output.headers().set(HttpHeaders.Names.CONTENT_TYPE, HTTPResource.WEBVTT_TYPEMIME);
 						response.append(HlsHelper.getChaptersWebVtt(item));
-					} else if (requestData[3].endsWith("/chapters.json")) {
+					} else if (mediaServerRequest.getOptionalPath().endsWith("/chapters.json")) {
 						output.headers().set(HttpHeaders.Names.CONTENT_TYPE, HTTPResource.JSON_TYPEMIME);
 						response.append(HlsHelper.getChaptersHls(item));
-					} else if (requestData[3].startsWith("hls/")) {
+					} else if (mediaServerRequest.getOptionalPath().startsWith("hls/")) {
 						//HLS
-						if (requestData[3].endsWith(".m3u8")) {
+						if (mediaServerRequest.getOptionalPath().endsWith(".m3u8")) {
 							//HLS rendition m3u8 file
-							String rendition = requestData[3].replace("hls/", "").replace(".m3u8", "");
+							String rendition = mediaServerRequest.getOptionalPath().replace("hls/", "").replace(".m3u8", "");
 							if (HlsHelper.getByKey(rendition) != null) {
 								output.headers().set(HttpHeaders.Names.CONTENT_TYPE, HTTPResource.HLS_TYPEMIME);
-								String baseUrl = MediaStreamHandler.getMediaURL(renderer.getUUID()).toString();
+								String baseUrl = MediaServerRequest.getMediaURL(renderer.getUUID()).toString();
 								response.append(HlsHelper.getHLSm3u8ForRendition(item, renderer, baseUrl, rendition));
 							}
 						} else {
 							//HLS stream request
 							cLoverride = StoreResource.TRANS_SIZE;
-							inputStream = HlsHelper.getInputStream("/" + requestData[3], item);
-							if (requestData[3].endsWith(".ts")) {
+							inputStream = HlsHelper.getInputStream("/" + mediaServerRequest.getOptionalPath(), item);
+							if (mediaServerRequest.getOptionalPath().endsWith(".ts")) {
 								output.headers().set(HttpHeaders.Names.CONTENT_TYPE, HTTPResource.MPEGTS_BYTESTREAM_TYPEMIME);
-							} else if (requestData[3].endsWith(".vtt")) {
+							} else if (mediaServerRequest.getOptionalPath().endsWith(".vtt")) {
 								output.headers().set(HttpHeaders.Names.CONTENT_TYPE, HTTPResource.WEBVTT_TYPEMIME);
 							}
 						}
-					} else if (requestData[3].endsWith("_transcoded_to.m3u8")) {
+					} else if (mediaServerRequest.getOptionalPath().endsWith("_transcoded_to.m3u8")) {
 						//HLS start m3u8 file
 						output.headers().set(HttpHeaders.Names.CONTENT_TYPE, HTTPResource.HLS_TYPEMIME);
-						String baseUrl = MediaStreamHandler.getMediaURL(renderer.getUUID()).toString();
+						String baseUrl = MediaServerRequest.getMediaURL(renderer.getUUID()).toString();
 						response.append(HlsHelper.getHLSm3u8(item, renderer, baseUrl));
 						if (contentFeatures != null) {
 							//output.headers().set("transferMode.HlsHelper.org", "Streaming");
@@ -445,7 +430,7 @@ public class RequestV2 extends HTTPResource {
 					} else if (item.getMediaInfo() != null && item.getMediaInfo().getMediaType() == MediaType.IMAGE && item.isCodeValid(item)) {
 						// This is a request for an image
 						Services.postponeSleep();
-						DLNAImageProfile imageProfile = ImagesUtil.parseImageRequest(requestData[3], null);
+						DLNAImageProfile imageProfile = ImagesUtil.parseImageRequest(mediaServerRequest.getOptionalPath(), null);
 						if (imageProfile == null) {
 							// Parsing failed for some reason, we'll have to pick a profile
 							if (item.getMediaInfo().getImageInfo() != null && item.getMediaInfo().getImageInfo().getFormat() != null) {
@@ -477,7 +462,7 @@ public class RequestV2 extends HTTPResource {
 								imageInputStream = item.getInputStream();
 							}
 							if (imageInputStream == null) {
-								LOGGER.warn("Input stream returned for \"{}\" was null, no image will be sent to renderer", requestData[3]);
+								LOGGER.warn("Input stream returned for \"{}\" was null, no image will be sent to renderer", mediaServerRequest.getOptionalPath());
 							} else {
 								inputStream = DLNAImageInputStream.toImageInputStream(imageInputStream, imageProfile, false);
 								if (contentFeatures != null) {
@@ -516,7 +501,7 @@ public class RequestV2 extends HTTPResource {
 							LOGGER.trace("", ie);
 							return future;
 						}
-					} else if (item.getMediaInfo() != null && MediaStreamHandler.SUBTITLES.equals(requestData[1]) && item.isCodeValid(item)) {
+					} else if (item.getMediaInfo() != null && mediaServerRequest.isSubtitlesRequest() && item.isCodeValid(item)) {
 						// This is a request for a subtitles file
 						output.headers().set(HttpHeaders.Names.CONTENT_TYPE, "text/plain");
 						output.headers().set(HttpHeaders.Names.EXPIRES, getFutureDate() + " GMT");
@@ -1184,18 +1169,6 @@ public class RequestV2 extends HTTPResource {
 
 		response.append("<NumberReturned>").append(filessize - minus).append("</NumberReturned>");
 		response.append(CRLF);
-		StoreContainer parentFolder;
-
-		if (resources != null && filessize > 0) {
-			parentFolder = resources.get(0).getParent();
-		} else {
-			StoreResource resource = renderer.getMediaStore().getResource(objectID);
-			if (resource instanceof StoreContainer storeContainer) {
-				parentFolder = storeContainer;
-			} else {
-				throw new ContentDirectoryException(ContentDirectoryErrorCode.NO_SUCH_OBJECT);
-			}
-		}
 
 		if (browseDirectChildren && renderer.isUseMediaInfo() && renderer.isDLNATreeHack()) {
 			// with the new parser, resources are parsed and analyzed *before*
@@ -1213,6 +1186,22 @@ public class RequestV2 extends HTTPResource {
 
 			response.append("<TotalMatches>").append(totalCount).append("</TotalMatches>");
 		} else if (browseDirectChildren) {
+			StoreContainer parentFolder;
+			if (resources != null && filessize > 0) {
+				parentFolder = resources.get(0).getParent();
+			} else {
+				StoreResource resource = renderer.getMediaStore().getResource(objectID);
+				if (resource instanceof StoreContainer storeContainer) {
+					parentFolder = storeContainer;
+				} else {
+					if (resource instanceof StoreItem) {
+						LOGGER.debug("Trying to browse direct children on a store item for objectID '{}' !", objectID);
+					} else {
+						LOGGER.debug("Trying to browse direct children on a null object for objectID '{}' !", objectID);
+					}
+					throw new ContentDirectoryException(ContentDirectoryErrorCode.NO_SUCH_OBJECT);
+				}
+			}
 			response.append("<TotalMatches>").append(((parentFolder != null) ? parentFolder.childrenCount() : filessize) - minus).append("</TotalMatches>");
 		} else {
 			// From upnp spec: If BrowseMetadata is specified in the BrowseFlags then TotalMatches = 1
@@ -1278,7 +1267,7 @@ public class RequestV2 extends HTTPResource {
 		if (payload != null) {
 			if (payload.getPosSecond() == 0) {
 				// Sometimes when Samsung device is starting to play the video
-				// it sends X_SetBookmark message immediatelly with the position=0.
+				// it sends X_SetBookmark message immediately with the position=0.
 				// No need to update database in such case.
 				LOGGER.debug("Skipping \"set bookmark\". Position=0");
 			} else {
@@ -1352,7 +1341,7 @@ public class RequestV2 extends HTTPResource {
 			String cb = soapaction.replace("<", "").replace(">", "");
 
 			try {
-				URL soapActionUrl = new URL(cb);
+				URL soapActionUrl = URI.create(cb).toURL();
 				String addr = soapActionUrl.getHost();
 				int port = soapActionUrl.getPort();
 				try (
@@ -1371,7 +1360,7 @@ public class RequestV2 extends HTTPResource {
 					out.write(CRLF.getBytes(StandardCharsets.UTF_8));
 					out.flush();
 				}
-			} catch (MalformedURLException ex) {
+			} catch (IllegalArgumentException | MalformedURLException ex) {
 				LOGGER.debug("Cannot parse address and port from soap action \"" + soapaction + "\"", ex);
 			}
 		} else {
@@ -1418,7 +1407,4 @@ public class RequestV2 extends HTTPResource {
 		return SDF.format(new Date(10000000000L + System.currentTimeMillis()));
 	}
 
-	public String getUri() {
-		return uri;
-	}
 }
